# nooise

./: .gitignore  .wtp.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  DEV_LOG.md  EXPERIMENTS.md  GOTCHAS.md  PRD.md  README.md  cliff.toml  justfile
.plexi-beta/: .gitignore  apps.toml  commands.toml  workspace.toml
.stint/: config.toml
.stint/tasks/: 0001-add-perc-beat-control.md
docs/: NORTH_STAR.md
docs/proposals/: 2026-07-14-effects-module-system.md
docs/superpowers/plans/: 2026-06-30-perc-beat-control.md  2026-07-01-chord-progressions.md  2026-07-02-lfo-ergonomics.md
docs/superpowers/specs/: 2026-06-30-perc-beat-control-design.md  2026-07-01-chord-progressions-design.md  2026-07-02-lfo-ergonomics-design.md
scripts/: bench_render.sh  publish.sh  release.sh
src/: AGENTS.md  audio.rs  fluid.rs  main.rs  sequencer.rs  update_check.rs
src/experiments/: mod.rs  r1.rs  r2.rs  r3.rs  r4.rs  t1.rs  t2.rs  t3.rs  t4.rs  t5.rs  t5_poc1.rs  t5_poc2.rs  t5_poc3.rs  t5_poc4.rs  t5_poc5.rs  t5_poc6.rs
src/fluid/: auto.rs  automation.rs  controls.rs  engine.rs  mod.rs  registry.rs  song.rs  tests.rs  ui.rs
src/fluid/voice/: arp.rs  bass.rs  clap.rs  kick.rs  mod.rs  pad.rs  perc.rs  tonal.rs
src/fx/: AGENTS.md  lfo.rs  mod.rs  panner.rs  reverb.rs
src/synth/: AGENTS.md  envelope.rs  fm.rs  mod.rs  noise.rs  oscillator.rs
ui_experiments/python/: exp08.py  exp09.py  exp10.py  exp11.py  exp12.py
ui_experiments/rust/: Cargo.toml
