[package]
name = "nooise"
version = "1.1.0"
edition = "2024"
default-run = "nooise"
description = "Ambient music generator for the terminal"
license = "MIT"
repository = "https://github.com/ianjamesburke/nooise"

[[bin]]
name = "nooise"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
rand = "0.8"
ratatui = "0.29"
crossterm = "0.28"
arc-swap = "1.9.1"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5.1"
