[package]
name = "nooise"
version = "1.4.0"
edition = "2024"
default-run = "nooise"
description = "Ambient music generator for the terminal"
license = "MIT"
repository = "https://github.com/ianjamesburke/nooise"

[[bin]]
name = "nooise"
path = "src/main.rs"

# The audio callback renders per-sample DSP in real time; unoptimized dev
# builds leave almost no headroom (~1.4x realtime) and crackle. opt-level 1
# restores near-release throughput while keeping fast incremental compiles.
[profile.dev]
opt-level = 1

[dependencies]
cpal = "0.15"
rand = "0.8"
ratatui = "0.29"
crossterm = "0.28"
arc-swap = "1.9.1"
arboard = "3.6.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5.1"
update-informer = "1.3"
